--- a/templates/packman.html
+++ b/templates/packman.html
@@ -16,9 +16,14 @@
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
             <div class="accordion-body">
+              <form id="packNameForm">
+                <label for="packName" class="form-label">Pack Name (Required)</label>
+                <input type="text" class="form-control" id="packName" name="pack_name" aria-describedby="pack-name">
+              </form>
+              <br/>
               <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown button
+                  Choose Data Type
                 </button>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#" onclick="showMessage('file')">File</a></li>
@@ -32,24 +37,12 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Accordion Item #2
+              Step 2. Confirm Pack
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Accordion Item #3
-            </button>
-          </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <p id="packagedData">No Data to pack</p>
             </div>
           </div>
         </div>
@@ -60,13 +53,15 @@
 <script>
     function showMessage(type) {
         const messageDiv = document.getElementById('message');
+        const packNameValue = document.getElementById('packName').value;
         if (type === 'file') {
             messageDiv.innerHTML = `
                 <p class="text-danger">You are about to add a file.</p>
                 <form id="fileForm" enctype="multipart/form-data" onsubmit="submitFile(event)">
                     <input type="file" name="file" class="form-control mt-2" required>
+                    <input type="hidden" name="pack_name" value="${packNameValue}">
                     <br/>
-                    <button type="submit" class="btn btn-primary">Add Data</button>
+                    <button type="submit" class="btn btn-primary" onclick="disablePackName()">Add Data</button>
                 </form>
                 <br/>
                 <div class="container">
@@ -81,8 +76,9 @@
                 <p class="text-info">You are about to add a webpage.</p>
                 <form id="linkForm" onsubmit="submitLink(event)">
                     <input type="url" name="link" class="form-control mt-2" placeholder="Enter web link" required>
+                    <input type="hidden" name="pack_name" value="${packNameValue}">
                     <br/>
-                    <button type="submit" class="btn btn-primary">Add Data</button>
+                    <button type="submit" class="btn btn-primary" onclick="disablePackName()">Add Data</button>
                 </form>
                 <br/>
                 <div class="container">
@@ -91,6 +87,10 @@
                 </div>
             `;
         }
+    }
+
+    function disablePackName() {
+        document.getElementById('packName').disabled = true;
     }
 
     function submitLink(event) {
@@ -160,15 +160,12 @@
     }
 
     function openAccordionTwo() {
-        const collapseOne = new bootstrap.Collapse(document.getElementById('collapseOne'), {
-            toggle: false
-        });
-        collapseOne.show();
-        
         const collapseTwo = new bootstrap.Collapse(document.getElementById('collapseTwo'), {
             toggle: false
         });
         collapseTwo.show();
+        
+        document.getElementById('packagedData').innerText = 'It worked there is data to pack!';
     }
 </script>
 {% endblock %}
