--- a/templates/home.html
+++ b/templates/home.html
@@ -17,21 +17,37 @@
         <h2>Available Packs</h2>
         <br/>
         {% if packs %}
-            <ul class="list-group">
+            <div class="accordion" id="packsAccordion">
                 {% for pack in packs %}
-                    <li class="list-group-item">
-                        <strong>{{ pack.pack_name }}</strong>
-                        <ul>
-                            {% for link in pack.links %}
-                                <li>Link: {{ link }}</li>
-                            {% endfor %}
-                            {% for file in pack.files %}
-                                <li>File: {{ file.filename }}</li>
-                            {% endfor %}
-                        </ul>
-                    </li>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading{{ loop.index }}">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
+                                {{ pack.pack_name }}
+                            </button>
+                        </h2>
+                        <div id="collapse{{ loop.index }}" class="accordion-collapse collapse show" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#packsAccordion">
+                            <div class="accordion-body">
+                                <div class="accordion" id="contentAccordion{{ loop.index }}">
+                                    {% for content in pack.contents %}
+                                        <div class="accordion-item">
+                                            <h2 class="accordion-header" id="headingContent{{ loop.index }}{{ loop.index0 }}">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseContent{{ loop.index }}{{ loop.index0 }}" aria-expanded="false" aria-controls="collapseContent{{ loop.index }}{{ loop.index0 }}">
+                                                    {% if content.data_type == 'file' %}File: {{ content.filename }}{% else %}Content{% endif %}
+                                                </button>
+                                            </h2>
+                                            <div id="collapseContent{{ loop.index }}{{ loop.index0 }}" class="accordion-collapse collapse" aria-labelledby="headingContent{{ loop.index }}{{ loop.index0 }}" data-bs-parent="#contentAccordion{{ loop.index }}">
+                                                <div class="accordion-body">
+                                                    <p>{{ content.content }}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 {% endfor %}
-            </ul>
+            </div>
         {% else %}
             <p>No packs available.</p>
         {% endif %}
