added basics for DeepQuery code packs

--- a/templates/home.html
+++ b/templates/home.html
@@ -56,6 +56,7 @@
         {% endif %}
         <br/>
         <a href="/packman" class="btn btn-primary">Add Pack</a>
+        <a href="/packman-code" class="btn btn-primary">Add Code Pack</a>
         <a href="/del-pack" class="btn btn-danger">Delete Pack</a>
         <br/>
         <br/>
